fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,6 @@ html {
 }
 
 .memes {
-  /*margin: 16px;*/
   max-height: calc(100% - 90px);
   justify-content: space-around;
   display: flex;
@@ -57,23 +56,23 @@ html {
 }
 
 .meme {
-  max-width: 100vw;
-  margin: 16px;
+  max-width: calc(100vw - 2rem);
+  margin: 1rem;
   position: relative;
-  /*display: flex;*/
-  /*flex-direction: column;*/
-  /*align-items: center;*/
-  /*justify-content: center;*/
 }
 
 .memeTitle {
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
   padding: .2rem .3rem;
-  position: absolute;
-  bottom: 3px;
+  /*position: absolute;*/
+  /*bottom: 3px;*/
   width: 100%;
-  left: 0px;
+  /*left: 0px;*/
+  margin-top: -4px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 /*.MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {*/
